[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["jeroenboeye <jeroenboeye@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
advent-of-code-data = "^1.1.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.9.3"
pre-commit = "^2.16.0"

[tool.isort]
profile = "black"
line_length=120
use_parentheses = "true"
include_trailing_comma = "true"
force_grid_wrap = "true"
ensure_newline_before_comments = "true"
multi_line_output = 3
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
